--- a/demo_upload_image/packages/my_upload_package/pubspec.yaml
+++ b/demo_upload_image/packages/my_upload_package/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   json_annotation: ^4.8.1
   equatable: ^2.0.5
   freezed_annotation: ^3.0.0
+  grpc: ^3.2.4
+  protobuf: ^3.1.0
 
 dev_dependencies:
   build_runner: ^2.4.8
