--- a/demo_upload_image/pubspec.yaml
+++ b/demo_upload_image/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_guide_ai
+name: demo_upload_image
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,7 +37,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   get_it: ^7.6.4
   go_router: ^13.0.1
-  freezed_annotation: ^2.4.1
+  freezed_annotation: ^3.0.0
   json_annotation: ^4.8.1
   equatable: ^2.0.5
   my_upload_package:
@@ -59,7 +59,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.4.8
-  freezed: ^2.4.6
+  freezed: ^3.0.6
   json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
