--- a/demo_upload_image/pubspec.yaml
+++ b/demo_upload_image/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   freezed_annotation: ^3.0.0
   json_annotation: ^4.8.1
   equatable: ^2.0.5
+  grpc: ^3.2.4
+  protobuf: ^3.1.0
+  file_picker: ^10.1.5
+  video_player: ^2.9.5
   my_upload_package:
     path: packages/my_upload_package
 
@@ -61,6 +65,7 @@ dev_dependencies:
   build_runner: ^2.4.8
   freezed: ^3.0.6
   json_serializable: ^6.7.1
+  protoc_plugin: ^21.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -72,8 +77,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  assets:
-    - assets/images/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
